--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -50,11 +50,11 @@
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../RFCN/JPEGImages/'\n",
     "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
-    "CROP_MODEL = 'resnet50__DO5_256_DO5'\n",
-    "CHECKPOINT_DIR = './checkpoints/checkpoint' + CROP_MODEL + '/'\n",
-    "LOG_DIR = './logs/log' + CROP_MODEL + '/'\n",
-    "# CHECKPOINT_DIR = './checkpoints/checkpoint4/'\n",
-    "# LOG_DIR = './logs/log4/'\n",
+    "CROP_MODEL = 'resnet50_DO5_256_DO5'\n",
+    "CHECKPOINT_DIR = './checkpoints/checkpoint_' + CROP_MODEL + '/'\n",
+    "if not os.path.exists(CHECKPOINT_DIR):\n",
+    "    os.mkdir(CHECKPOINT_DIR)\n",
+    "LOG_DIR = './logs/log_' + CROP_MODEL + '/'\n",
     "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "CONF_THRESH = 0.8\n",
     "ROWS = 224\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -328,27 +328,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3496, 7) (875, 7)\n",
-      "(106456, 7)\n",
-      "88\n",
-      "(106368, 7) (88, 7)\n"
+      "CPU times: user 17.1 s, sys: 0 ns, total: 17.1 s\n",
+      "Wall time: 17 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# train data prepare\n",
     "# GTbbox_df = ['image_file','crop_index','crop_class','xmin',''ymin','xmax','ymax']\n",
     "# NoFbbox_df = ['image_file','crop_index','crop_class','xmin','ymin','xmax','ymax',\n",
     "#               'NoF_RFCN','ALB_RFCN','BET_RFCN','DOL_RFCN','LAG_RFCN','OTHER_RFCN','SHARK_RFCN','YFT_RFCN']\n",
     "\n",
     "train_fish_df, valid_fish_df = train_test_split(GTbbox_df, test_size=0.2, random_state=1986, stratify=GTbbox_df['crop_class'])\n",
-    "print(train_fish_df.shape,valid_fish_df.shape)\n",
     "NoFbbox_df.drop(['NoF_RFCN','ALB_RFCN','BET_RFCN','DOL_RFCN','LAG_RFCN','OTHER_RFCN','SHARK_RFCN','YFT_RFCN'], axis=1, inplace=True)\n",
-    "print(NoFbbox_df.shape)\n",
     "nb_NoF_valid = math.ceil(valid_fish_df.shape[0]/10)\n",
-    "print(nb_NoF_valid)\n",
     "train_nof_df, valid_nof_df = train_test_split(NoFbbox_df, test_size=nb_NoF_valid, random_state=1986)\n",
-    "print(train_nof_df.shape,valid_nof_df.shape)\n",
     "\n",
     "nb_fish = math.ceil(BATCHSIZE*0.25 / (len(FISH_CLASSES)-1))\n",
     "nb_nof = BATCHSIZE - nb_fish*(len(FISH_CLASSES)-1)\n",
@@ -405,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +424,16 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "16384/51456 [========>.....................] - ETA: 474s - loss: 1.4946 - acc: 0.6460"
+     ]
+    }
+   ],
    "source": [
     "#Resnet50\n",
     "#top layer training\n",
@@ -460,7 +464,8 @@
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
-    "model.fit_generator(train_generator(datagen=train_datagen, fish_df=train_fish_df, nof_df=train_nof_df), samples_per_epoch=samples_per_epoch, nb_epoch=30, verbose=1,\n",
+    "model.fit_generator(train_generator(datagen=train_datagen, fish_df=train_fish_df, nof_df=train_nof_df), \n",
+    "                    samples_per_epoch=samples_per_epoch, nb_epoch=30, verbose=1,\n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=(valid_x,valid_y), nb_worker=3, pickle_safe=True)"
    ]
