--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -86,19 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading from file GTbbox_df.pickle\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GTbbox_df = ['image_file','crop_index','crop_class','xmin',''ymin','xmax','ymax']\n",
     "\n",
@@ -138,49 +130,6 @@
     "                assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
     "                GTbbox_df.loc[len(GTbbox_df)]=[image_file,i,a[\"class\"],max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
     "                if a[\"class\"] != c: print(GTbbox_df.tail(1))\n",
-    "\n",
-    "#     #crop NoF by detections_full_AGNOSTICnms.pkl\n",
-    "#     num_NoF_perIm = 10\n",
-    "    \n",
-    "#     with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
-    "#         detections_full_AGNOSTICnms = pickle.load(f, encoding='latin1')\n",
-    "#     train_detections_full_AGNOSTICnms = detections_full_AGNOSTICnms[1000:]\n",
-    "#     with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
-    "#         test_files = f.readlines()\n",
-    "#     train_files = test_files[1000:]\n",
-    "#     assert len(train_detections_full_AGNOSTICnms) == len(train_files)\n",
-    "\n",
-    "#     for im in range(len(train_detections_full_AGNOSTICnms)):\n",
-    "#         if im%1000 == 0: print(im)\n",
-    "#         image_file = train_files[im][:9]+'.jpg'\n",
-    "#         image = Image.open(TEST_DIR+image_file)\n",
-    "#         width_image, height_image = image.size\n",
-    "\n",
-    "#         bboxes = []\n",
-    "#         detects_im = train_detections_full_AGNOSTICnms[im]\n",
-    "#         for i in range(len(detects_im)):\n",
-    "#             if detects_im[i,4] >= 0.999 and detects_im[i,2]<width_image and detects_im[i,3]<height_image:\n",
-    "#                 bboxes.append(detects_im[i,:]) \n",
-    "#         bboxes = np.asarray(bboxes)\n",
-    "#         bboxes = bboxes[np.random.choice(bboxes.shape[0], num_NoF_perIm, replace=False), :]\n",
-    "\n",
-    "#         for j in range(len(bboxes)):    \n",
-    "#             bbox = bboxes[j]\n",
-    "#             xmin = bbox[0]\n",
-    "#             ymin = bbox[1]\n",
-    "#             xmax = bbox[2]\n",
-    "#             ymax = bbox[3]\n",
-    "#             width = xmax-xmin\n",
-    "#             height = ymax-ymin\n",
-    "#             delta_width = p/(COLS-2*p)*width\n",
-    "#             delta_height = p/(ROWS-2*p)*height\n",
-    "#             xmin_expand = xmin-delta_width\n",
-    "#             ymin_expand = ymin-delta_height\n",
-    "#             xmax_expand = xmax+delta_width\n",
-    "#             ymax_expand = ymax+delta_height\n",
-    "#             assert max(xmin_expand,0)<min(xmax_expand,width_image)\n",
-    "#             assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
-    "#             GTbbox_df.loc[len(GTbbox_df)]=[image_file,j,'NoF',max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
     "\n",
     "    GTbbox_df.to_pickle('../data/'+file_name)    "
    ]
@@ -430,7 +379,16 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "16384/51456 [========>.....................] - ETA: 474s - loss: 1.4946 - acc: 0.6460"
+      "51200/51456 [============================>.] - ETA: 3s - loss: 1.0766 - acc: 0.7136Epoch 00000: val_loss improved from inf to 1.90609, saving model to ./checkpoints/checkpoint_resnet50_DO5_256_DO5/weights.000-1.9061.hdf5\n",
+      "51456/51456 [==============================] - 709s - loss: 1.0746 - acc: 0.7141 - val_loss: 1.9061 - val_acc: 0.2679\n",
+      "Epoch 2/30\n",
+      "51200/51456 [============================>.] - ETA: 3s - loss: 0.6879 - acc: 0.7869Epoch 00001: val_loss improved from 1.90609 to 1.89432, saving model to ./checkpoints/checkpoint_resnet50_DO5_256_DO5/weights.001-1.8943.hdf5\n",
+      "51456/51456 [==============================] - 657s - loss: 0.6876 - acc: 0.7870 - val_loss: 1.8943 - val_acc: 0.2876\n",
+      "Epoch 3/30\n",
+      "51200/51456 [============================>.] - ETA: 3s - loss: 0.5997 - acc: 0.8092Epoch 00002: val_loss improved from 1.89432 to 1.76721, saving model to ./checkpoints/checkpoint_resnet50_DO5_256_DO5/weights.002-1.7672.hdf5\n",
+      "51456/51456 [==============================] - 673s - loss: 0.5996 - acc: 0.8092 - val_loss: 1.7672 - val_acc: 0.3292\n",
+      "Epoch 4/30\n",
+      "27904/51456 [===============>..............] - ETA: 301s - loss: 0.5611 - acc: 0.8197"
      ]
     }
    ],
