--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, random, glob, pickle, collections, math\n",
     "import numpy as np\n",
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +42,7 @@
     "# TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../RFCN/JPEGImages/'\n",
     "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
-    "CROP_MODEL = 'resnet50_DO5_256_DO5_FT38'\n",
+    "CROP_MODEL = 'resnet50_DO5_FT38'\n",
     "CHECKPOINT_DIR = './' + CROP_MODEL + '/checkpoint/'\n",
     "if not os.path.exists(CHECKPOINT_DIR):\n",
     "    os.mkdir(CHECKPOINT_DIR)\n",
@@ -89,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -722,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -731,7 +723,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model from checkpoints file ./checkpoints/resnet50_DO5_256_DO5_FT38/weights.012-0.3948.hdf5\n"
+      "Loading model from checkpoints file ./resnet50_DO5_FT38/checkpoint/weights.025-0.3670.hdf5\n"
      ]
     }
    ],
@@ -759,7 +751,6 @@
     "            current_batch_size = n - current_index\n",
     "            batch_index = 0        \n",
     "        batch_df = df[current_index:current_index+current_batch_size]\n",
-    "#         batch_df = batch_df[['image_file','xmin','ymin','xmax','ymax']]\n",
     "        batch_x = np.zeros((batch_df.shape[0], ROWS, COLS, 3), dtype=K.floatx())\n",
     "        i = 0\n",
     "        for index,row in batch_df.iterrows():\n",
@@ -786,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -795,20 +786,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading from file GTbbox_CROPpred_df_weights.012-0.3948.hdf5_.pickle\n",
+      "Loading from file GTbbox_CROPpred_df_weights.025-0.3670.hdf5_.pickle\n",
       "crop_class\n",
-      "ALB      0.251183\n",
-      "BET      0.100649\n",
-      "DOL      0.181231\n",
-      "LAG      0.000128\n",
-      "OTHER    0.059655\n",
-      "SHARK    0.073495\n",
-      "YFT      0.112141\n",
+      "ALB      0.140953\n",
+      "BET      0.051831\n",
+      "DOL      0.189900\n",
+      "LAG      0.000063\n",
+      "OTHER    0.054545\n",
+      "SHARK    0.077625\n",
+      "YFT      0.103938\n",
       "Name: logloss, dtype: float64\n",
-      "0.18490654219054167\n",
+      "0.11665313641105421\n",
       "50\n",
       "0\n",
-      "NoF       0.0122033\n"
+      "NoF       0.00436714\n"
      ]
     }
    ],
@@ -850,7 +841,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# resnet50_DO5_256_DO5_FT38\n",
+    "Loading from file GTbbox_CROPpred_df_weights.012-0.3948.hdf5_.pickle\n",
+    "crop_class\n",
+    "ALB      0.251183\n",
+    "BET      0.100649\n",
+    "DOL      0.181231\n",
+    "LAG      0.000128\n",
+    "OTHER    0.059655\n",
+    "SHARK    0.073495\n",
+    "YFT      0.112141\n",
+    "Name: logloss, dtype: float64\n",
+    "0.18490654219054167\n",
+    "50\n",
+    "0\n",
+    "NoF       0.0122033"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -934,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -943,7 +959,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating file RFCNbbox_RFCNpred_CROPpred_df_weights.012-0.3948.hdf5_.pickle\n",
+      "Generating file RFCNbbox_RFCNpred_CROPpred_df_weights.025-0.3670.hdf5_.pickle\n",
       "1th augmentation for testing ...\n",
       "0\n",
       "2th augmentation for testing ...\n",
@@ -990,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1107,7 +1123,7 @@
    ],
    "source": [
     "#temperature\n",
-    "T = 2.5\n",
+    "T = 1\n",
     "test_pred_array = test_pred_df[FISH_CLASSES].values\n",
     "test_pred_T_array = np.exp(np.log(test_pred_array)/T)\n",
     "test_pred_T_array = test_pred_T_array/np.sum(test_pred_T_array, axis=1, keepdims=True)\n",
@@ -1121,6 +1137,37 @@
     "print(test_pred_T_df.groupby(['image_class'])['logloss'].mean())\n",
     "train_logloss = test_pred_T_df['logloss'].mean()\n",
     "print('logloss of train is', train_logloss )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-a37b2b1f3545>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-a37b2b1f3545>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    ALB      0.379154\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_class\n",
+    "--            NaN\n",
+    "ALB      0.379154\n",
+    "BET      0.150810\n",
+    "DOL      0.111402\n",
+    "LAG      0.020587\n",
+    "NoF      0.191428\n",
+    "OTHER    0.088848\n",
+    "SHARK    0.087299\n",
+    "YFT      0.170171\n",
+    "Name: logloss, dtype: float64\n",
+    "logloss of train is 0.2521023066961748"
    ]
   },
   {
