--- a/model_bbox/Hybrid_RFCN_CROP.ipynb
+++ b/model_bbox/Hybrid_RFCN_CROP.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -85,9 +85,13 @@
     "    #resnet50 image preprocessing\n",
     "    # 'RGB'->'BGR'\n",
     "    x = x[:, :, ::-1]\n",
-    "    x[:, :, 0] -= 103.939\n",
-    "    x[:, :, 1] -= 116.779\n",
-    "    x[:, :, 2] -= 123.68\n",
+    "#     x[:, :, 0] -= 103.939\n",
+    "#     x[:, :, 1] -= 116.779\n",
+    "#     x[:, :, 2] -= 123.68\n",
+    "    x[:, :, 0] -= 128\n",
+    "    x[:, :, 1] -= 128\n",
+    "    x[:, :, 2] -= 128\n",
+    "    x /= 255.\n",
     "    return x\n",
     "\n",
     "def get_best_model():\n",
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -204,8 +208,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 5s, sys: 876 ms, total: 1min 6s\n",
-      "Wall time: 1min 6s\n"
+      "CPU times: user 1min 8s, sys: 0 ns, total: 1min 8s\n",
+      "Wall time: 1min 7s\n"
      ]
     }
    ],
@@ -228,10 +232,10 @@
     "    horizontal_flip=True,\n",
     "    vertical_flip=True)\n",
     "\n",
-    "def train_generator(datagen, df, batchsize = BATCHSIZE):\n",
+    "def train_generator(datagen, df):\n",
     "    while 1:\n",
-    "        batch_x = np.zeros((batchsize, ROWS, COLS, 3), dtype=K.floatx())\n",
-    "        batch_y = np.zeros((batchsize, len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "        batch_x = np.zeros((BATCHSIZE, ROWS, COLS, 3), dtype=K.floatx())\n",
+    "        batch_y = np.zeros((BATCHSIZE, len(FISH_CLASSES)), dtype=K.floatx())\n",
     "        fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nb_fish, replace=False),:]\n",
     "        batch_df = df.groupby('crop_class', as_index=True).apply(fn)\n",
     "        i = 0\n",
@@ -266,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -296,97 +300,23 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 2.1831 - acc: 0.2439Epoch 00000: val_loss improved from inf to 1.87896, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.000-1.8790.hdf5\n",
-      "16128/16128 [==============================] - 257s - loss: 2.1796 - acc: 0.2453 - val_loss: 1.8790 - val_acc: 0.3465\n",
+      "16000/16128 [============================>.] - ETA: 1s - loss: 2.2073 - acc: 0.2465Epoch 00000: val_loss improved from inf to 1.45326, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.000-1.4533.hdf5\n",
+      "16128/16128 [==============================] - 261s - loss: 2.2026 - acc: 0.2480 - val_loss: 1.4533 - val_acc: 0.7734\n",
       "Epoch 2/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.6069 - acc: 0.4336Epoch 00001: val_loss improved from 1.87896 to 1.31173, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.001-1.3117.hdf5\n",
-      "16128/16128 [==============================] - 232s - loss: 1.6050 - acc: 0.4340 - val_loss: 1.3117 - val_acc: 0.5901\n",
+      "16000/16128 [============================>.] - ETA: 1s - loss: 1.6258 - acc: 0.4295Epoch 00001: val_loss improved from 1.45326 to 1.17159, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.001-1.1716.hdf5\n",
+      "16128/16128 [==============================] - 230s - loss: 1.6243 - acc: 0.4301 - val_loss: 1.1716 - val_acc: 0.7757\n",
       "Epoch 3/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.3391 - acc: 0.5326Epoch 00002: val_loss improved from 1.31173 to 1.06471, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.002-1.0647.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 1.3383 - acc: 0.5327 - val_loss: 1.0647 - val_acc: 0.6568\n",
+      "16000/16128 [============================>.] - ETA: 1s - loss: 1.3600 - acc: 0.5264Epoch 00002: val_loss improved from 1.17159 to 1.04376, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.002-1.0438.hdf5\n",
+      "16128/16128 [==============================] - 232s - loss: 1.3594 - acc: 0.5272 - val_loss: 1.0438 - val_acc: 0.7757\n",
       "Epoch 4/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.1894 - acc: 0.5826Epoch 00003: val_loss improved from 1.06471 to 0.93397, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.003-0.9340.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 1.1898 - acc: 0.5829 - val_loss: 0.9340 - val_acc: 0.6928\n",
+      "16000/16128 [============================>.] - ETA: 1s - loss: 1.2192 - acc: 0.5699Epoch 00003: val_loss improved from 1.04376 to 1.03836, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.003-1.0384.hdf5\n",
+      "16128/16128 [==============================] - 231s - loss: 1.2182 - acc: 0.5704 - val_loss: 1.0384 - val_acc: 0.7757\n",
       "Epoch 5/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.0885 - acc: 0.6190Epoch 00004: val_loss improved from 0.93397 to 0.88955, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.004-0.8896.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 1.0892 - acc: 0.6187 - val_loss: 0.8896 - val_acc: 0.7025\n",
+      "16000/16128 [============================>.] - ETA: 1s - loss: 1.1234 - acc: 0.6062Epoch 00004: val_loss did not improve\n",
+      "16128/16128 [==============================] - 231s - loss: 1.1227 - acc: 0.6066 - val_loss: 1.0439 - val_acc: 0.7757\n",
       "Epoch 6/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.0192 - acc: 0.6408Epoch 00005: val_loss improved from 0.88955 to 0.81313, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.005-0.8131.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 1.0193 - acc: 0.6406 - val_loss: 0.8131 - val_acc: 0.7274\n",
-      "Epoch 7/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.9687 - acc: 0.6620Epoch 00006: val_loss improved from 0.81313 to 0.76620, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.006-0.7662.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 0.9676 - acc: 0.6623 - val_loss: 0.7662 - val_acc: 0.7395\n",
-      "Epoch 8/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.9335 - acc: 0.6701Epoch 00007: val_loss improved from 0.76620 to 0.72235, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.007-0.7224.hdf5\n",
-      "16128/16128 [==============================] - 232s - loss: 0.9332 - acc: 0.6703 - val_loss: 0.7224 - val_acc: 0.7513\n",
-      "Epoch 9/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.8730 - acc: 0.6924Epoch 00008: val_loss improved from 0.72235 to 0.68296, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.008-0.6830.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.8724 - acc: 0.6928 - val_loss: 0.6830 - val_acc: 0.7685\n",
-      "Epoch 10/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.8581 - acc: 0.6981Epoch 00009: val_loss improved from 0.68296 to 0.65042, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.009-0.6504.hdf5\n",
-      "16128/16128 [==============================] - 229s - loss: 0.8577 - acc: 0.6985 - val_loss: 0.6504 - val_acc: 0.7790\n",
-      "Epoch 11/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.8432 - acc: 0.6998Epoch 00010: val_loss did not improve\n",
-      "16128/16128 [==============================] - 230s - loss: 0.8427 - acc: 0.7001 - val_loss: 0.6741 - val_acc: 0.7682\n",
-      "Epoch 12/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7931 - acc: 0.7172Epoch 00011: val_loss did not improve\n",
-      "16128/16128 [==============================] - 230s - loss: 0.7941 - acc: 0.7173 - val_loss: 0.6552 - val_acc: 0.7754\n",
-      "Epoch 13/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7733 - acc: 0.7242Epoch 00012: val_loss improved from 0.65042 to 0.61857, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.012-0.6186.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.7734 - acc: 0.7243 - val_loss: 0.6186 - val_acc: 0.7885\n",
-      "Epoch 14/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7670 - acc: 0.7298Epoch 00013: val_loss improved from 0.61857 to 0.60999, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.013-0.6100.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.7668 - acc: 0.7300 - val_loss: 0.6100 - val_acc: 0.7895\n",
-      "Epoch 15/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7483 - acc: 0.7301Epoch 00014: val_loss improved from 0.60999 to 0.58242, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.014-0.5824.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.7481 - acc: 0.7302 - val_loss: 0.5824 - val_acc: 0.8024\n",
-      "Epoch 16/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7309 - acc: 0.7395Epoch 00015: val_loss improved from 0.58242 to 0.58194, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.015-0.5819.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.7294 - acc: 0.7400 - val_loss: 0.5819 - val_acc: 0.8039\n",
-      "Epoch 17/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7183 - acc: 0.7455Epoch 00016: val_loss improved from 0.58194 to 0.56073, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.016-0.5607.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.7182 - acc: 0.7457 - val_loss: 0.5607 - val_acc: 0.8088\n",
-      "Epoch 18/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7051 - acc: 0.7458Epoch 00017: val_loss improved from 0.56073 to 0.54998, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.017-0.5500.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 0.7054 - acc: 0.7458 - val_loss: 0.5500 - val_acc: 0.8149\n",
-      "Epoch 19/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6658 - acc: 0.7620Epoch 00021: val_loss improved from 0.53422 to 0.52738, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.021-0.5274.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 0.6665 - acc: 0.7617 - val_loss: 0.5274 - val_acc: 0.8221\n",
-      "Epoch 23/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6515 - acc: 0.7648Epoch 00022: val_loss did not improve\n",
-      "16128/16128 [==============================] - 231s - loss: 0.6516 - acc: 0.7652 - val_loss: 0.5370 - val_acc: 0.8190\n",
-      "Epoch 24/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6465 - acc: 0.7652Epoch 00023: val_loss improved from 0.52738 to 0.52683, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.023-0.5268.hdf5\n",
-      "16128/16128 [==============================] - 232s - loss: 0.6469 - acc: 0.7649 - val_loss: 0.5268 - val_acc: 0.8216\n",
-      "Epoch 25/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6491 - acc: 0.7674Epoch 00024: val_loss improved from 0.52683 to 0.51417, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.024-0.5142.hdf5\n",
-      "16128/16128 [==============================] - 231s - loss: 0.6483 - acc: 0.7678 - val_loss: 0.5142 - val_acc: 0.8267\n",
-      "Epoch 26/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6321 - acc: 0.7766Epoch 00025: val_loss did not improve\n",
-      "16128/16128 [==============================] - 230s - loss: 0.6323 - acc: 0.7765 - val_loss: 0.5183 - val_acc: 0.8267\n",
-      "Epoch 27/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6243 - acc: 0.7753Epoch 00026: val_loss improved from 0.51417 to 0.50068, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.026-0.5007.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 0.6236 - acc: 0.7757 - val_loss: 0.5007 - val_acc: 0.8301\n",
-      "Epoch 28/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6171 - acc: 0.7788Epoch 00027: val_loss improved from 0.50068 to 0.49380, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.027-0.4938.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 0.6169 - acc: 0.7791 - val_loss: 0.4938 - val_acc: 0.8337\n",
-      "Epoch 29/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6160 - acc: 0.7785Epoch 00028: val_loss did not improve\n",
-      "16128/16128 [==============================] - 230s - loss: 0.6167 - acc: 0.7783 - val_loss: 0.5027 - val_acc: 0.8314\n",
-      "Epoch 30/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6172 - acc: 0.7784Epoch 00029: val_loss improved from 0.49380 to 0.47939, saving model to ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.029-0.4794.hdf5\n",
-      "16128/16128 [==============================] - 230s - loss: 0.6165 - acc: 0.7792 - val_loss: 0.4794 - val_acc: 0.8393\n"
+      " 8960/16128 [===============>..............] - ETA: 81s - loss: 1.0340 - acc: 0.6366"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f305cb6fba8>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -419,7 +349,7 @@
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
-    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df, batchsize = 2*BATCHSIZE)), \n",
+    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df), \n",
     "                    samples_per_epoch=samples_per_epoch, nb_epoch=30, verbose=1,\n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=(valid_x,valid_y), nb_worker=3, pickle_safe=True)"
@@ -431,15 +361,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading model from checkpoint file ./resnet50_DO5_FT38_Hybrid/checkpoint/weights.029-0.4794.hdf5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resnet50\n",
     "# fine tuning\n",
@@ -449,7 +371,7 @@
     "# 38 conv3+conv4+conv5+top\n",
     "start_layer = 38\n",
     "\n",
-    "model = get_best_model()\n",
+    "model, model_name = get_best_model()\n",
     "# print('Loading model from weights.004-0.0565.hdf5')\n",
     "# model = load_model('./checkpoints/checkpoint3/weights.004-0.0565.hdf5')\n",
     "\n",
@@ -463,7 +385,7 @@
     "optimizer = Adam(lr=1e-5)\n",
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df, batchsize = BATCHSIZE),\n",
+    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df),\n",
     "                    samples_per_epoch=samples_per_epoch, nb_epoch=300, verbose=1,\n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=(valid_x,valid_y), nb_worker=3, pickle_safe=True)"
@@ -473,18 +395,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#resume training\n",
     "\n",
-    "model = get_best_model()\n",
+    "model, model_name = get_best_model()\n",
     "# print('Loading model from weights.004-0.0565.hdf5')\n",
     "# model = load_model('./checkpoints/checkpoint3/weights.004-0.0565.hdf5')\n",
     "\n",
-    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df),\n",
-    "                    samples_per_epoch=samples_per_epoch, nb_epoch=300, verbose=1,\n",
+    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df), \n",
+    "                    samples_per_epoch=samples_per_epoch, nb_epoch=30, verbose=1,\n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=(valid_x,valid_y), nb_worker=3, pickle_safe=True)"
    ]
